Update to MC 1.21.4